--- a/reference.bib
+++ b/reference.bib
@@ -539,5 +539,12 @@
     key = {Express – Node.js web application framework},
     title = {Express – Node.js web application framework},
     url = {https://expressjs.com/},
-    urldate = {2018-04-18}
+    urldate = {2018-04-20}
+}
+
+@online{git,
+    key = {Git},
+    title = {Git},
+    url = {https://git-scm.com/},
+    urldate = {2018-04-20}
 }
